--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </h1>
                 <p>Lorem Ipsum is simply dummy text of the printing
                     and typesetting industry</p>
-                <button class="uppercase bg-[#a4bc46] py-3 px-7 rounded-xl text-white font-semibold">
+                <button class="uppercase bg-[#a4bc46] py-3 px-6 rounded-xl text-white font-semibold">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none" viewBox="0 0 24 24"
                         stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -87,7 +87,7 @@
                         <h2 class="text-3xl text-jacketprice font-bold">
                             $234
                         </h2>
-                        <button class="uppercase bg-[#a4bc46] py-3 px-7 rounded-xl text-white font-semibold">
+                        <button class="uppercase bg-[#a4bc46] py-3 px-6 rounded-xl text-white font-semibold">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none"
                                 viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                                 <path stroke-linecap="round" stroke-linejoin="round"
@@ -107,7 +107,7 @@
                         <h2 class="text-3xl text-jacketprice font-bold">
                             $234
                         </h2>
-                        <button class="uppercase bg-[#a4bc46] py-3 px-7 rounded-xl text-white font-semibold">
+                        <button class="uppercase bg-[#a4bc46] py-3 px-6 rounded-xl text-white font-semibold">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none"
                                 viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                                 <path stroke-linecap="round" stroke-linejoin="round"
@@ -127,7 +127,7 @@
                         <h2 class="text-3xl text-jacketprice font-bold">
                             $234
                         </h2>
-                        <button class="uppercase bg-[#a4bc46] py-3 px-7 rounded-xl text-white font-semibold">
+                        <button class="uppercase bg-[#a4bc46] py-3 px-6 rounded-xl text-white font-semibold">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none"
                                 viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                                 <path stroke-linecap="round" stroke-linejoin="round"
@@ -154,7 +154,7 @@
                         <h2 class="text-3xl text-jacketprice font-bold">
                             $234
                         </h2>
-                        <button class="uppercase bg-[#a4bc46] py-3 px-7 rounded-xl text-white font-semibold">
+                        <button class="uppercase bg-[#a4bc46] py-3 px-6 rounded-xl text-white font-semibold">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none"
                                 viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                                 <path stroke-linecap="round" stroke-linejoin="round"
@@ -174,7 +174,7 @@
                         <h2 class="text-3xl text-jacketprice font-bold">
                             $234
                         </h2>
-                        <button class="uppercase bg-[#a4bc46] py-3 px-7 rounded-xl text-white font-semibold">
+                        <button class="uppercase bg-[#a4bc46] py-3 px-6 rounded-xl text-white font-semibold">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none"
                                 viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                                 <path stroke-linecap="round" stroke-linejoin="round"
@@ -194,7 +194,7 @@
                         <h2 class="text-3xl text-jacketprice font-bold">
                             $234
                         </h2>
-                        <button class="uppercase bg-[#a4bc46] py-3 px-7 rounded-xl text-white font-semibold">
+                        <button class="uppercase bg-[#a4bc46] py-3 px-6 rounded-xl text-white font-semibold">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none"
                                 viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                                 <path stroke-linecap="round" stroke-linejoin="round"
@@ -214,7 +214,7 @@
                         <img src="images/shopping.png" alt="">
                     </div>
                     <div class="mr-5">
-                        <div class="sm:w-11/12/12 mb-9 rounded-lg flex p-6 shadow-lg">
+                        <div class="sm:w-11/12/12 mb-9 rounded-lg flex-col md:flex-row flex p-6 shadow-lg">
                             <img class="w-20 h-20 mx-3" src="images/house.png" alt="">
                             <div>
                                 <h2 class="text-2xl">Find the Perfect Fit</h2>
@@ -223,7 +223,7 @@
                                     offer styles for every body.</p>
                             </div>
                         </div>
-                        <div class="sm:w-11/12/12 mb-9 rounded-lg flex p-6 shadow-lg">
+                        <div class="sm:w-11/12/12 mb-9 rounded-lg flex-col md:flex-row flex p-6 shadow-lg">
                             <img class="w-20 h-20 mx-3" src="images/box.png" alt="">
                             <div>
                                 <h2 class="text-2xl">Find the Perfect Fit</h2>
@@ -232,7 +232,7 @@
                                     offer styles for every body.</p>
                             </div>
                         </div>
-                        <div class="sm:w-11/12/12 mb-9 rounded-lg flex p-6 shadow-lg">
+                        <div class="sm:w-11/12/12 mb-9 rounded flex-col md:flex-row flex p-6 shadow-lg">
                             <img class="w-20 h-20 mx-3" src="images/question.png" alt="">
                             <div>
                                 <h2 class="text-2xl">Find the Perfect Fit</h2>
